--- a/sys-Bash/5-01.md
+++ b/sys-Bash/5-01.md
@@ -9,6 +9,9 @@
 
 Скрипт должен принимать абсолютный путь до директории, например `/tmp/testdir` или `/home/user/testdir`
 
+![screenshot](https://user-images.githubusercontent.com/119346017/227715869-9dec57f6-a293-4dd4-9f77-f8930a858521.png)
+
+
 
 ------
 ### Задание 2.
