--- a/sys-Bash/5-01.md
+++ b/sys-Bash/5-01.md
@@ -23,6 +23,11 @@
 2. Необходимо вычесть из большего числа меньшее и вывести результат в консоль.
 3. Если числа равны – умножить их друг на друга (или возвести в квадрат одно из чисел) и вывести результат в консоль.
 
+ответ
+
+![screenshot](https://user-images.githubusercontent.com/119346017/227716546-2b5ae351-0bb2-4ec9-98d9-0c098622f76a.png)
+
+
 
 ------
 ### Задание 3.
