--- a/sys-Bash/5-01.md
+++ b/sys-Bash/5-01.md
@@ -40,6 +40,9 @@
 - Если txt или doc – вывести слово «text»
 - Если формат не подходит под заданные выше – написать «unknown»
 
+![screenshot](https://user-images.githubusercontent.com/119346017/227719179-6e50cbb7-bf93-402a-848e-430c4826c330.png)
+
+
 ------
 ## Дополнительные задания (со звездочкой*)
 
