--- a/sys-Bash/5-02.md
+++ b/sys-Bash/5-02.md
@@ -10,6 +10,11 @@
 
 Для выполнения задания используйте цикл.
 
+ответ
+
+![screenshot](https://user-images.githubusercontent.com/119346017/227777550-22eca7c1-04c3-405a-9f87-ba5736aa4d8a.png)
+
+
 ------
 ### Задание 2.
 
