--- a/sys-Bash/5-02.md
+++ b/sys-Bash/5-02.md
@@ -22,6 +22,11 @@
 
 Для выполнения задания используйте цикл.
 
+ответ
+
+![screenshot](https://user-images.githubusercontent.com/119346017/227778601-bfc8c196-abf9-4644-8869-67c0bacd2a87.png)
+
+
 ------
 ### Задание 3.
 
