--- a/sys-Bash/5-02.md
+++ b/sys-Bash/5-02.md
@@ -61,6 +61,11 @@
 
 </details>
 
+ответ
+
+![screenshot](https://user-images.githubusercontent.com/119346017/228430377-1fb80300-57c7-41ba-a0e9-44397ae00c64.png)
+
+
 
 
 ------
