--- a/sys-Bash/5-03.md
+++ b/sys-Bash/5-03.md
@@ -1,27 +1,6 @@
 # Домашнее задание к занятию "Regexp и его использование для синтаксического анализа"
 
-### Цель задания
-В результате выполнения этого задания вы научитесь использовать:
-1. Регулярные выражения для фильтрации вывода;
-2. Утилиту sed для работы с конфигурационными файлами;
-3. Утилиту awk для анализа информации.
 
-------
-
-### Чеклист готовности к домашнему заданию
-
-1. Установлена операционная система Ubuntu на виртуальную машину или локально и имеется доступ к терминалу (удаленный или из графической оболочки)
-2. Произведена работа с файлами, рассматриваемыми на лекции, которые находятся [ссылке](5-03/)
-
-### Инструкция к заданию
-
-1. Сделайте копию [Шаблона для домашнего задания](https://docs.google.com/document/d/1youKpKm_JrC0UzDyUslIZW2E2bIv5OVlm_TQDvH5Pvs/edit) себе на Google Диск.
-2. В названии файла введите корректное название лекции и вашу фамилию и имя.
-3. Зайдите в “Настройки доступа” и выберите доступ “Просматривать могут все в Интернете, у кого есть ссылка”. Ссылка на инструкцию [Как предоставить доступ к файлам и папкам на Google Диске](https://support.google.com/docs/answer/2494822?hl=ru&co=GENIE.Platform%3DDesktop)
-4. Скопируйте текст задания в свой  Google Документ.
-5. Выполните домашнее задание, запишите ответы и приложите необходимые скриншоты и код в свой Google Документ.
-6. Для проверки домашнего задания преподавателем отправьте ссылку на ваш Google документ в личном кабинете.
-7. Любые вопросы по решению задач задавайте в чате учебной группы.
 
 ------
 
@@ -40,6 +19,8 @@
 ```
 
 *Пришлите получившееся выражение в качестве ответа.*
+
+grep -E "((25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(\.|\b)){4}" iptest
 
 ---
 
