--- a/sys-Bash/5-03.md
+++ b/sys-Bash/5-03.md
@@ -20,7 +20,7 @@
 
 *Пришлите получившееся выражение в качестве ответа.*
 
-grep -E "((25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(\.|\b)){4}" iptest
+`grep -E "((25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(\.|\b)){4}" iptest`
 
 ---
 
