--- a/sys-Bash/5-03.md
+++ b/sys-Bash/5-03.md
@@ -45,8 +45,17 @@
 
 Используя `awk` и `ps aux` соберите информацию о:
  - количестве процессов для каждого пользователя;
+
+![image](https://user-images.githubusercontent.com/119346017/228573838-91e1b037-fa75-4629-a9f5-eb38007e2346.png)
+
  - процессе с самым большим PID;
+
+![image](https://user-images.githubusercontent.com/119346017/228574173-fc06366d-0eef-45b0-886b-09d904678375.png)
+
  - (дополнительное задание со звездочкой*) суммарном использовании памяти различными пользователями.
+
+![image](https://user-images.githubusercontent.com/119346017/228574510-65061929-fc0d-4b86-8d86-5cec5efd6831.png)
+
 
 *Пришлите скриншоты со скриптами и демонстрацией их работы*
 
