--- a/sys-Bash/5-03.md
+++ b/sys-Bash/5-03.md
@@ -39,6 +39,9 @@
 
 `cat nginx.conf | sed -E '/(^\s*#|^\s*$)/d'`
 
+![image](https://user-images.githubusercontent.com/119346017/228618404-06b1941e-004c-4bc3-b59c-b34e0eff2568.png)
+
+
 ------
 
 ### Задание 3.
