--- a/sys-Bash/5-04.md
+++ b/sys-Bash/5-04.md
@@ -1,29 +1,6 @@
 # Домашнее задание к занятию "Работа с текстовыми утилитами" 
 
-### Цель задания
-В результате выполнения этого задания вы научитесь:
-1. Использовать команды для поиска файлов в Linux;
-2. Перенаправлять потоки в различные файлы;
-3. Подсчитывать количество строк в выводе;
-4. Использовать сортировку.
-------
 
-### Чеклист готовности к домашнему заданию
-
-1. Установлена операционная система Ubuntu на виртуальную машину или локально и имеется доступ к терминалу (удаленный или из графической оболочки)
-2. Просмотрены скрипты, рассматриваемые на лекции, которые находятся по [ссылке](5-04/)
-3. Установлена утилита mlocate `sudo apt-get install mlocate`
-
-
-### Инструкция к заданию
-
-1. Сделайте копию [Шаблона для домашнего задания](https://docs.google.com/document/d/1youKpKm_JrC0UzDyUslIZW2E2bIv5OVlm_TQDvH5Pvs/edit) себе на Google Диск.
-2. В названии файла введите корректное название лекции и вашу фамилию и имя.
-3. Зайдите в “Настройки доступа” и выберите доступ “Просматривать могут все в Интернете, у кого есть ссылка”. Ссылка на инструкцию [Как предоставить доступ к файлам и папкам на Google Диске](https://support.google.com/docs/answer/2494822?hl=ru&co=GENIE.Platform%3DDesktop)
-4. Скопируйте текст задания в свой  Google Документ.
-5. Для успешного выполнения задания составьте конвейеры из нескольких команд, приложите команды в текстовом виде и необходимые скриншоты в свой Google Документ.
-6. Для проверки домашнего задания преподавателем отправьте ссылку на ваш Google документ в личном кабинете.
-7. Любые вопросы по решению задач задавайте в чате учебной группы
 
 ------
 
@@ -40,6 +17,11 @@
  - Направьте ошибки в отдельный файл в вашей домашней директории;
  - Стандартный поток вывода направьте в другой файл;
  - Подсчитайте, сколько объектов не удалось прочитать.
+
+ответ
+
+![screenshot](https://user-images.githubusercontent.com/119346017/228625665-74374304-1d81-4e2c-a78d-fb847304cfe7.png)
+
  
 ------
 ### Задание 3.
@@ -60,20 +42,4 @@
 В ОС Linux скрытыми файлами считаются те, имена которых начинаются с точки.
 
 Сколько скрытых файлов в вашем домашнем каталоге?
-
-
-------
-
-### Правила приема работы
-
-- В личном кабинете отправлена ссылка на  ваш Google Документ, в котором  прописаны команды в текстовом виде и скриншоты, демонстрирующий работу каждой команды
-- В документе настроены права доступа “Просматривать могут все в Интернете, у кого есть ссылка”
-- Название документа содержит название лекции и ваши фамилию и имя
-
-------
-### Критерии оценки
-
-Зачет - выполнены все задания, приложен текст команды, приложены соответствующие скриншоты, в выполненных заданиях нет противоречий и нарушения логики
-
-На доработку - задание выполнено частично или не выполнено, в логике выполнения заданий есть противоречия, команды не работают или работают не во всех случаях.
 
