--- a/sys-Bash/5-04.md
+++ b/sys-Bash/5-04.md
@@ -31,6 +31,10 @@
  - Уберите из подсчета строку `total`;
  - С помощью `wc` подсчитайте различные типы разрешений в этом каталоге.
  
+ ответ
+ 
+ ![screenshot](https://user-images.githubusercontent.com/119346017/228631390-542fbce7-5099-4222-8870-56ea0e40ff23.png)
+
 
 ------
 ## Дополнительные задания (со звездочкой*)
