--- a/sys-Bash/5-04.md
+++ b/sys-Bash/5-04.md
@@ -47,3 +47,6 @@
 
 Сколько скрытых файлов в вашем домашнем каталоге?
 
+![screenshot](https://user-images.githubusercontent.com/119346017/228632784-b2782653-28a2-471d-8397-eeea74e62a28.png)
+
+
