--- a/sys-Bash/5-04.md
+++ b/sys-Bash/5-04.md
@@ -10,6 +10,11 @@
 - Перенаправьте результаты работы каждой команды в разные файлы;
 - Подсчитайте количество найденных файлов в каждом случае с помощью `wc`.
 
+ответ
+
+![screenshot](https://user-images.githubusercontent.com/119346017/228725315-cda2cdc7-000a-433c-b7f1-40d1e9f75bb5.png)
+
+
 ------
 ### Задание 2.
 
