--- a/sys-Bash/5-05.md
+++ b/sys-Bash/5-05.md
@@ -1,31 +1,5 @@
 # Домашнее задание к занятию "Разбор скриптов и и их написание"
 
-### Цель задания
-В результате выполнения этого задания вы научитесь:
-1. Контролировать передачу пользователем параметров скрипту;
-2. Проверять входные данные;
-3. Проверять, что скрипт запущен с повышенными привилегиями.
-------
-
-### Чеклист готовности к домашнему заданию
-
-1. Установлена операционная система Ubuntu на виртуальную машину или локально и имеется доступ к терминалу (удаленный или из графической оболочки)
-2. Установлена утилита arping (sudo apt install -y arping)
-3. Просмотрены коды скриптов, расположенные по [ссылке](5-05/)
-------
-
-### Инструкция к заданию
-
-1. Сделайте копию [Шаблона для домашнего задания](https://docs.google.com/document/d/1youKpKm_JrC0UzDyUslIZW2E2bIv5OVlm_TQDvH5Pvs/edit) себе на Google Диск.
-2. В названии файла введите корректное название лекции и вашу фамилию и имя.
-3. Зайдите в “Настройки доступа” и выберите доступ “Просматривать могут все в Интернете, у кого есть ссылка”. Ссылка на инструкцию [Как предоставить доступ к файлам и папкам на Google Диске](https://support.google.com/docs/answer/2494822?hl=ru&co=GENIE.Platform%3DDesktop)
-4. Скопируйте текст задания в свой  Google Документ.
-5. Исправьте приведенный bash-скрипт.
-6. Для проверки необходимо прикрепить ссылку на ваш Google документ, в котором прописан код скрипта и скриншоты, демонстрирующие различные сценарии работы данного скрипта.
-7. Для проверки домашнего задания преподавателем отправьте  в личном кабинете.
-8. Любые вопросы по решению задач задавайте в чате учебной группы
-
-------
 
 ### Задание 1.
 
@@ -63,6 +37,10 @@ done
 - не забывайте проверять вводимые пользователем параметры с помощью регулярных выражений и знака `~=` в условных операторах 
 - проверьте, что скрипт запускается с повышенными привилегиями и сообщите пользователю, если скрипт запускается без них
 
+ответ
+
+!https://github.com/Sweet-To0th/netology-sys/blob/main/sys-Bash/5-05/1.sh
+
 ------
 
 ## Дополнительные задания (со звездочкой*)
@@ -79,19 +57,4 @@ done
 - не забывайте проверять в начале работы скрипта, что введенный интерфейс существует 
 - воспользуйтесь shellcheck для улучшения качества своего кода
 
-
-------
-
-### Правила приема работы
-
-- В личном кабинете отправлена ссылка на  ваш Google документ, в котором прописан  код скрипта и скриншоты, демонстрирующие корректную работу скрипта
-- В документе настроены права доступа “Просматривать могут все в Интернете, у кого есть ссылка”
-- Название документа содержит название лекции и ваши фамилию и имя
-
-------
-### Критерии оценки
-
-Зачет - выполнены все задания, приложен скрипт, приложены соответствующие скриншоты, в выполненных заданиях нет противоречий и нарушения логики
-
-На доработку - задание выполнено частично или не выполнено, в логике выполнения заданий есть противоречия, скрипты не работают или работают не во всех случаях.
 
