--- a/sys-virt/6-02.md
+++ b/sys-virt/6-02.md
@@ -34,6 +34,11 @@
 Можете использовать пример [по ссылке](https://dl-cdn.alpinelinux.org/alpine/v3.13/releases/x86/alpine-standard-3.13.5-x86.iso).
 
 Пример взят [с сайта](https://alpinelinux.org). 
+
+ответ
+
+![image](https://user-images.githubusercontent.com/119346017/229347860-7b67ee9c-5c2f-406f-9014-0f5f04e43e67.png)
+
  
 ---
 
