--- a/sys-virt/6-02.md
+++ b/sys-virt/6-02.md
@@ -39,6 +39,8 @@
 
 ![image](https://user-images.githubusercontent.com/119346017/229347860-7b67ee9c-5c2f-406f-9014-0f5f04e43e67.png)
 
+![image](https://user-images.githubusercontent.com/119346017/229350045-17fb8bb3-b111-4e44-9175-b54de0caee94.png)
+
  
 ---
 
