--- a/sys-virt/6-02.md
+++ b/sys-virt/6-02.md
@@ -41,7 +41,9 @@
 
 ![image](https://user-images.githubusercontent.com/119346017/229350045-17fb8bb3-b111-4e44-9175-b54de0caee94.png)
 
- 
+
+ ![image](https://user-images.githubusercontent.com/119346017/229350366-81f54495-b8d4-4f62-998b-56476b47cee0.png)
+
 ---
 
 ### Задание 3 
