--- a/sys-virt/6-02.md
+++ b/sys-virt/6-02.md
@@ -56,6 +56,11 @@
 Можете использовать пример [по ссылке](https://dl-cdn.alpinelinux.org/alpine/v3.13/releases/x86/alpine-standard-3.13.5-x86.iso). 
 
 Пример взят [с сайта](https://alpinelinux.org). 
+
+ответ
+
+![image](https://user-images.githubusercontent.com/119346017/229370437-e6f5d4b9-b815-4acc-823f-5d9897ee4adc.png)
+
  
  ---
 
