--- a/auto, ci-cd/7-01.md
+++ b/auto, ci-cd/7-01.md
@@ -1,14 +1,5 @@
 # Домашнее задание к занятию «7.1. Ansible. Часть 1»
 
-### Оформление домашнего задания
-
-1. Домашнее задание выполните в [Google Docs](https://docs.google.com/) и отправьте на проверку ссылку на ваш документ в личном кабинете.  
-1. В названии файла укажите номер лекции и фамилию студента. Пример названия: 7.1. Ansible. Часть 1 — Александр Александров.
-1. Перед отправкой проверьте, что доступ для просмотра открыт всем, у кого есть ссылка. Если нужно прикрепить дополнительные ссылки, добавьте их в свой Google Docs.
-
-Любые вопросы по решению задач задавайте в чате учебной группы.
-
----
 
 ### Задание 1
 
@@ -16,7 +7,10 @@
 
 Какие преимущества даёт подход IAC?
 
----
+*** Ответ: ***
+
+Преимуества IaC - согласованность, снижение расходов, скорость, эффективность и уменьшение рисков. Инфраструктура IaC может повысить согласованность и сократить число ошибок, которые часто имеют место при построении конфигураций вручную. Снижение расходов при использовании IaC относится не только к денежной, но и временной составляющей. Количество времени, затрачиваемое на рутинные операции уменьшается. Это в свою очередь увеличивает скорость развертывания инфраструктуры и позволяет эффективнее использовать существующие ресурсы. Благодаря кодированию инфраструктуры, появляется возможность создавать шаблоны для подготовки и выделения ресурсов, что упрощает конфигурацию, обслуживание систем и управление ими. Кроме того, автоматизация позволяет минимизировать риск возникновения человеческой ошибки, что важно при развертывании инфрастурктуры из большого количества серверов. 
+
 
 ### Задание 2 
 
