--- a/auto, ci-cd/7-01.md
+++ b/auto, ci-cd/7-01.md
@@ -30,6 +30,11 @@
 
 Какая разница между параметрами forks и serial? 
 
+*** Ответ: ***
+
+Forks - определяет максимальное количество нод в одной партии, на которых будет параллельно выполняться одна задача из playbook'а. Чем больше узлов, на которых Ansible выполняет задачи параллельно, тем больше ресурсов CPU и памяти нужно на сервере, где крутится узел управления Ansible (control node).
+Serial - ограничивает количество нод внутри одной партии для того, чтобы снизить потребление ресурсов CPU и памяти. Этот параметр удобно использовать, к примеру, когда нужно обновить несколько одинаковых серверов за балансировщиком – исключить одновременное отключение всех рабочих инстансов. Или для проверочных прогонов – к примеру разделить ноды одной партии на две части, и сначала проверить все задачи на одной части серверов этой партии, затем проверить оставшиеся.
+
 ---
 
 ### Задание 4 
