--- a/sys-virt/6-02.md
+++ b/sys-virt/6-02.md
@@ -61,7 +61,6 @@
 
 ![image](https://user-images.githubusercontent.com/119346017/229370437-e6f5d4b9-b815-4acc-823f-5d9897ee4adc.png)
 
-<a href="https://ibb.co/mcbX2Fs"><img src="https://i.ibb.co/6Wr1TJh/2023-04-08-14-30-48.png" alt="2023-04-08-14-30-48" border="0"></a>
  
  ---
 
@@ -74,6 +73,10 @@
 3. Для реализации используйте машину на базе QEMU. Можно дублировать, сделанную ранее. 
 
 ![image](https://user-images.githubusercontent.com/73060384/118615008-f95e9680-b7c8-11eb-9610-fc1e73d8bd70.png)
+
+ответ
+
+<a href="https://ibb.co/mcbX2Fs"><img src="https://i.ibb.co/6Wr1TJh/2023-04-08-14-30-48.png" alt="2023-04-08-14-30-48" border="0"></a>
 
 
 ---
