--- a/sys-virt/6-03.md
+++ b/sys-virt/6-03.md
@@ -21,7 +21,7 @@
 1. Установите Docker.
 1. Приложите скриншот.
 
-<a href="https://ibb.co/vkPk8wC"><img src="https://i.ibb.co/4pTpxmw/2023-04-09-07-52-00.png" alt="2023-04-09-07-52-00" border="0"></a><br /><a target='_blank' href='https://ru.imgbb.com/'>перевод с английского на русский по фото онлайн</a><br />
+<a href="https://ibb.co/vkPk8wC"><img src="https://i.ibb.co/4pTpxmw/2023-04-09-07-52-00.png" alt="2023-04-09-07-52-00" border="0"></a><br /><a target='_blank' href='https://ru.imgbb.com/'></a><br />
 
 ---
 
@@ -31,6 +31,8 @@
 
 1. Запустите образ hello-world.
 1. Приложите скриншот.
+
+<a href="https://ibb.co/2ydzL3L"><img src="https://i.ibb.co/TktQnMn/2023-04-09-08-06-04.png" alt="2023-04-09-08-06-04" border="0"></a>
 
 ---
 
