--- a/sys-virt/6-03.md
+++ b/sys-virt/6-03.md
@@ -43,6 +43,9 @@
 1. Удалите образ hello-world.
 1. Приложите скриншот.
 
+<a href="https://ibb.co/CtWbjcn"><img src="https://i.ibb.co/hMCBG6K/2023-04-10-07-49-58.png" alt="2023-04-10-07-49-58" border="0"></a>
+
+
 ---
 
 ## Дополнительные задания* (со звёздочкой)
