--- a/auto, ci-cd/7-02.md
+++ b/auto, ci-cd/7-02.md
@@ -12,6 +12,11 @@
  * процедурный;
  * интеллектуальный.
 
+ответ
+
+1.Функциональный подход фокусируется на том, какой должна быть конечная целевая конфигурация; то императив сосредотачивается на том, как инфраструктура должна быть изменена, чтобы соответствовать этому.[6] Декларативный подход определяет желаемое состояние, и система выполняет то, что должно произойти для достижения этого желаемого состояния.
+2.Процедурный определяет конкретные команды, которые необходимо выполнить в соответствующем порядке, чтобы получить желаемый результат.
+
 ---
 
 ### Задание 2
