--- a/auto, ci-cd/7-02.md
+++ b/auto, ci-cd/7-02.md
@@ -24,8 +24,12 @@
 
 **Ответьте на вопрос в свободной форме.**
 
-Как вы считаете, в чём преимущество применения Terraform?
- 
+Как вы считаете, в чём преимущество применения Terraform? 
+  
+  ответ
+  
+  Terraform - система оркестрации и один из ключевых инструментов DevOps,облегчающий управление инфраструктурой. Terraform помогает автоматизировать все,что можно автоматизировать. Когда работаете с облачным провайдером (например, Terraform AWS), нет необходимости прописывать вручную. Например ,сети, инстансы на консоли не нужно создавать руками. С Terraform просто описываете желаемую конфигурацию будущей инфраструктуры. Конфигурация описывается в human-readable format. После редактирования нужно запустить terraform apply, и система направит провайдеру вызов через API. Инфраструктура изменяется согласно внесенным корректировкам в файле.
+  
 ---
 
 ### Задание 3
