--- a/auto, ci-cd/7-02.md
+++ b/auto, ci-cd/7-02.md
@@ -79,3 +79,6 @@ RBAC: Основываясь на нем, управление доступом 
 
 Перечислите основные функции, которые могут использоваться в Terraform. 
 
+ответ
+
+функций много и их нельзя выделить одни над другими, просто они разные и нужны в разных ситуациях.Я бы сказал если есть та или иная функция значит её написали для дела, а если её написали для дела значит её уже можно выделить.
