--- a/auto, ci-cd/7-02.md
+++ b/auto, ci-cd/7-02.md
@@ -65,6 +65,10 @@ RBAC: Основываясь на нем, управление доступом 
 - [Зеркало YandexCloud для загрузки Terraform](https://hashicorp-releases.yandexcloud.net/terraform/)    
 - [Инструкция по настройке провайдера](https://cloud.yandex.ru/docs/tutorials/infrastructure-management/terraform-quickstart#configure-terraform)  
 
+ответ
+
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/SRRkYTx/2023-04-13-17-13-54.png" alt="2023-04-13-17-13-54" border="0"></a>
+
 ---
 
 ## Дополнительные задания* (со звёздочкой)
