--- a/sys-virt/6-04.md
+++ b/sys-virt/6-04.md
@@ -1,28 +1,5 @@
 # Домашнее задание к занятию «6.4. Docker. Часть 2»
 
-### Оформление домашнего задания
-
-1. Домашнее задание выполните в [Google Docs](https://docs.google.com/) и отправьте на проверку ссылку на ваш документ в личном кабинете.  
-1. В названии файла укажите номер лекции и фамилию студента. Пример названия: 6.4. Docker. Часть 2 — Александр Александров.
-1. Перед отправкой проверьте, что доступ для просмотра открыт всем, у кого есть ссылка. Если нужно прикрепить дополнительные ссылки, добавьте их в свой Google Docs.
-
-**Правила выполнения заданий к занятию «6.4. Docker. Часть 2»**
-
-- Все задания выполняйте на основе конфигов из лекции. 
-- В заданиях описаны те параметры, которые необходимо изменить. 
-- Если параметр не упомянут вообще, значит, его нужно оставить таким, какой он был в лекции. 
-- Если в каком-то задании, например, в задании 2, нужно изменить параметр, подразумевается, что во всех следующих заданиях будет использоваться уже изменённый параметр.
-- Выполнив все задания без звёздочки, вы должны получить полнофункциональный сервис.
-
-Любые вопросы по решению задач задавайте в чате учебной группы.
-
----
-
-## Важно
-
-Перед отправкой работы на проверку удаляйте неиспользуемые ресурсы. Это нужно, чтобы предупредить неконтролируемый расход средств, полученных после использования промокода.
-
-Рекомендации [по ссылке](https://github.com/netology-code/sdvps-homeworks/tree/main/recommend).
 
 ---
 
@@ -31,6 +8,10 @@
 **Напишите ответ в свободной форме, не больше одного абзаца текста.**
 
 Установите Docker Compose и опишите, для чего он нужен и как может улучшить вашу жизнь.
+
+*Приведите ответ в свободной форме на 1 абзац текста*
+
+Docker Compose — это инструментальное средство, входящее в состав Docker. Оно разработано для помощи в определении и совместном использовании многоконтейнерных приложений. С помощью Docker Compose можно создать 1 YAML-файл для определения служб и с помощью одной команды запустить и остановить все, что нужно при развертывании многоконтейнерных приложений.
 
 ---
 
