--- a/sys-virt/6-05.md
+++ b/sys-virt/6-05.md
@@ -9,6 +9,10 @@
 1. Добейтесь стабильной работы всех системных контейнеров.
 2. В качестве ответа пришлите скриншот результата выполнения команды kubectl get po -n kube-system.
 
+ответ
+
+<a href="https://ibb.co/rpzGBZS"><img src="https://i.ibb.co/rpzGBZS/2023-06-08-21-25-51.png" alt="2023-06-08-21-25-51" border="0"></a>
+
 ------
 ### Задание 2
 
@@ -53,6 +57,12 @@ spec:
 2. Запустите Deployment в своём кластере и добейтесь его стабильной работы.
 3. В качестве решения пришлите получившийся файл.
 
+ответ
+
+<a href="https://ibb.co/jbYTnZk"><img src="https://i.ibb.co/jbYTnZk/2023-06-08-21-28-50.png" alt="2023-06-08-21-28-50" border="0"></a>
+
+<a href="https://ibb.co/GW5mp8G"><img src="https://i.ibb.co/GW5mp8G/2023-06-08-21-29-46.png" alt="2023-06-08-21-29-46" border="0"></a>
+
 ------
 ### Задание 3
 
@@ -67,30 +77,12 @@ spec:
 
 2. В качестве решения пришлите получившиеся команды.
 
-------
-## Дополнительные задания* (со звёздочкой)
+ответ
 
-Их выполнение необязательное и не влияет на получение зачёта по домашнему заданию. Можете их решить, если хотите лучше разобраться в материале.
+kubectl exec -it pod/redis-9f87ddf8b-w2vd8 -- ps aux
 
----
+kubectl logs --since=5m redis-9f87ddf8b-w2vd8
 
-### Задание 4*
+kubectl delete pod/redis-9f87ddf8b-w2vd8
 
-Есть конфигурация nginx:
-
-```
-location / {
-    add_header Content-Type text/plain;
-    return 200 'Hello from k8s';
-}
-```
-
-**Выполните действия:**
-
-1. Напишите yaml-файлы для развёртки nginx, в которых будут присутствовать:
-
- - ConfigMap с конфигом nginx;
- - Deployment, который бы подключал этот configmap;
- - Ingress, который будет направлять запросы по префиксу /test на наш сервис.
-
-2. В качестве решения пришлите получившийся файл.
+kubectl port-forward pod/redis-9f87ddf8b-gs9qp 12345:80
