--- a/auto, ci-cd/7-03.md
+++ b/auto, ci-cd/7-03.md
@@ -1,14 +1,5 @@
 # Домашнее задание к занятию «7.3. Подъём инфраструктуры в Yandex Cloud»
 
-### Оформление домашнего задания
-
-1. Домашнее задание выполните в [Google Docs](https://docs.google.com/) и отправьте на проверку ссылку на ваш документ в личном кабинете.  
-1. В названии файла укажите номер лекции и фамилию студента. Пример названия: 7.3. Подъём инфраструктуры в Yandex Cloud — Александр Александров.
-1. Перед отправкой проверьте, что доступ для просмотра открыт всем, у кого есть ссылка. Если нужно прикрепить дополнительные ссылки, добавьте их в свой Google Docs.
-
-Любые вопросы по решению задач задавайте в чате учебной группы.
-
- ---
 
 ### Задание 1 
 
@@ -118,27 +109,8 @@ output "external_ip_address_vm_1" {
 
 Провести тестирование. 
 
----
+ответ
 
-## Дополнительные задания* (со звёздочкой)
+<a href="https://ibb.co/yfwDQ8h"><img src="https://i.ibb.co/YRz6LtD/2023-06-09-13-43-34.png" alt="2023-06-09-13-43-34" border="0"></a>
 
-Их выполнение необязательное и не влияет на получение зачёта по домашнему заданию. Можете их решить, если хотите лучше разобраться в материале.лнить, если хотите глубже и/или шире разобраться в материале.
-
---- 
-### Задание 2*
-
-**Выполните действия, приложите скриншот скриптов, скриншот выполненного проекта.**
-
-1. Перестроить инфраструктуру и добавить в неё вторую виртуальную машину. 
-2. Установить на вторую виртуальную машину базу данных. 
-3. Выполнить проверку состояния запущенных служб через Ansible.
-
----
-
-Дополнительные материалы: 
-
-1. [Nginx. Руководство для начинающих](https://nginx.org/ru/docs/beginners_guide.html). 
-2. [Руководство по Terraform](https://registry.terraform.io/providers/yandex-cloud/yandex/latest/doc). 
-3. [Ansible User Guide](https://docs.ansible.com/ansible/latest/user_guide/index.html).
-1. [Terraform Documentation](https://www.terraform.io/docs/index.html).
-
+<a href="https://ibb.co/nRNn56g"><img src="https://i.ibb.co/1btdw7v/2023-06-09-13-44-37.png" alt="2023-06-09-13-44-37" border="0"></a>
